--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </article>
     </section>
     <footer>
-        <p>&copy; 2025 João Guilherme. Todos os direitos reservados.</p>
+        <p>&copy; 2025 João Guilherme. Todos os direitos reservados. Teste de modificação</p>
         <section id="contato">
             <h2>Contato</h2>
             <address></address>
