--- a/index.html
+++ b/index.html
@@ -42,6 +42,35 @@
             <p>Aqui você pode ver os projetos que desenvolvi ao longo do tempo.</p>
         </article>
     </section>
+    <section id="habilidades">
+        <h2>Habilidades e tecnologias</h2>
+       <table>
+        <thead>
+            <tr>
+                <th>Tecnologia</th>
+                <th>Nível</th>
+                <th>Descrição</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>HTML</td>
+                <td>Avançado</td>
+                <td>Conhecimento avançado em HTML para estruturação de páginas web.</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>Intermediário</td>
+                <td>Habilidade intermediária em CSS para estilização de páginas web.</td>
+            </tr>
+            <tr>
+                <td>JavaScript</td>
+                <td>Intermediário</td>
+                <td>Habilidade intermediária em JavaScript para funcionalidades dinâmicas em páginas web.</td>
+            </tr>
+        </tbody>
+       </table>
+    </section>
     <footer>
         <p>&copy; 2025 João Guilherme. Todos os direitos reservados. Teste de modificação</p>
         <section id="contato">
@@ -66,7 +95,7 @@
                     <option value="reclamacao">Reclamação</option>
                 </select><br>
 
-                
+
                 <label for="mensagem">Mensagem: </label>
                 <textarea name="mensagem" id="mensagem" cols="30" rows="10" required></textarea><br>
 
@@ -74,7 +103,7 @@
                 <label for="inscricao">Desejo me inscrever para receber novidades</label><br>
 
                 <input type="submit" value="Enviar mensagem">
-            
+
             </form>
             </address>
         </section>
